--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,40 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+  background:white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+.traffic-light {
+  background: #222;
+  padding: 20px;
+  border-radius: 12px;
+  width: 120px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.light {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  opacity: 0.3;
+  cursor: pointer;
+  margin: 4px 0;
+}
+.red {
+  background: red;
+}
+.yellow {
+  background: yellow;
+}
+.green {
+  background: green;
+}
+.light.active {
+  opacity:2;
+  box-shadow: 0 0 20px 6px rgba(253, 253, 229, 0.424);
+}
